--- a/src/renderer/pages/DataSource/DataSource.css
+++ b/src/renderer/pages/DataSource/DataSource.css
@@ -4,7 +4,8 @@
 
 .page-DataSource-list {
   width: 280px;
-  border-right: 1px solid #ccc;
+  border-right: 1px solid var(--color-border);
+  background-color: var(--color-surface);
   min-height: 100vh;
 }
 
