--- a/src/renderer/components/DataSourceList/DataSourceList.css
+++ b/src/renderer/components/DataSourceList/DataSourceList.css
@@ -7,7 +7,7 @@
 .DataSourceList-new {
   padding: 10px;
   font-size: 20px;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--color-border);
 }
 
 .DataSourceList-new.darwin {
@@ -30,8 +30,8 @@
 .DataSourceList > ul > li {
   margin: 0;
   padding: 15px 10px;
-  border-bottom: 1px solid #ccc;
-  color: #333;
+  border-bottom: 1px solid var(--color-border);
+  color: var(--color-text);
   box-sizing: border-box;
   font-size: 14px;
   text-overflow: ellipsis;
@@ -41,8 +41,8 @@
 }
 
 .DataSourceList > ul > li.is-selected {
-  background-color: #2673e8;
-  color: #fff;
+  background-color: var(--color-accent);
+  color: var(--color-accent-contrast);
 }
 
 .DataSourceList-list {
