--- a/src/renderer/components/QueryHeaderTitle/QueryHeaderTitle.css
+++ b/src/renderer/components/QueryHeaderTitle/QueryHeaderTitle.css
@@ -25,6 +25,6 @@
 }
 
 .QueryHeaderTitle-textarea:focus {
-  border: 1px solid #ccc;
+  border: 1px solid var(--color-border);
   border-width: 0 1px 1px 0;
 }
