--- a/src/renderer/components/TableSummary/TableSummary.css
+++ b/src/renderer/components/TableSummary/TableSummary.css
@@ -16,11 +16,11 @@
 .TableSummary table th,
 .TableSummary table td {
   text-align: left;
-  border-bottom: 1px solid #ccc;
+  border-bottom: 1px solid var(--color-border);
   padding: 10px 5px;
   white-space: pre;
 }
 
 .TableSummary table th {
-  border-bottom: 3px double #ccc;
+  border-bottom: 3px double var(--color-border);
 }
