--- a/src/renderer/components/ModalDialog/ModalDialog.css
+++ b/src/renderer/components/ModalDialog/ModalDialog.css
@@ -8,6 +8,6 @@
   background-color: var(--color-surface);
   border: 1px solid var(--color-border);
   border-top: none;
-  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.2), 0 6px 10px -6px rgba(0, 0, 0, 0.2) inset;
+  box-shadow: var(--color-shadow);
   outline: none;
 }
