ダークモードでsplitterの色をグレーに変更
- --color-separator と --color-separator-highlighted トークンを追加
- react-splitter-layoutのスタイルをオーバーライドしてダークモードで落ち着いたグレーに

--- a/src/renderer/styles/app.css
+++ b/src/renderer/styles/app.css
@@ -63,3 +63,16 @@ select:focus {
 .contexify_separator {
   background-color: var(--color-contextmenu-border) !important;
 }
+
+/* React Splitter Layout overrides */
+.splitter-layout > .layout-splitter {
+  background-color: var(--color-separator) !important;
+}
+
+.splitter-layout > .layout-splitter:hover {
+  background-color: var(--color-separator-highlighted) !important;
+}
+
+.splitter-layout.layout-changing > .layout-splitter {
+  background-color: var(--color-separator-highlighted) !important;
+}
